<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menuHeight"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCancelar"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:textSize="@dimen/textSizeItemMenuFiltrar"
            android:textColor="@color/colorIco"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:onClick="Cancelar"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strFiltros"
            android:gravity="center"
            android:textSize="@dimen/textSizeItemMenuFiltrar"
            android:textColor="@color/colorIco"
            android:id="@+id/textView3"
            android:layout_alignTop="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strLimpar"
            android:gravity="right"
            android:paddingRight="@dimen/paddingRightFiltrar"
            android:textSize="@dimen/textSizeItemMenuFiltrar"
            android:textColor="@color/colorIco"
            android:id="@+id/textView4"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:onClick="Limpar"
            android:clickable="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:text="@string/strCategorias"
        android:id="@+id/textView5"
        android:textSize="@dimen/textSizeItem"
        android:layout_gravity="left"
        android:paddingLeft="@dimen/paddingLeftFiltrar"
        android:gravity="left"
        android:background="@color/colorItens" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Malhação"
        android:id="@+id/radioButton"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Luta"
        android:id="@+id/radioButton2"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All"
        android:id="@+id/radioButton3"
        android:checked="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:text="@string/strLocalizacao"
        android:id="@+id/textView6"
        android:textSize="@dimen/textSizeItem"
        android:layout_gravity="left"
        android:paddingLeft="@dimen/paddingLeftFiltrar"
        android:gravity="left"
        android:background="@color/colorItens" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Norte"
            android:id="@+id/radioButton4"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sul"
            android:id="@+id/radioButton5"
            android:checked="false" />


         </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Centro"
            android:id="@+id/radioButton6"
            android:checked="false" />

           </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leste"
            android:id="@+id/radioButton7"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oeste"
            android:id="@+id/radioButton5"
            android:checked="false" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:text="@string/strOrdernarPor"
        android:id="@+id/textView7"
        android:textSize="@dimen/textSizeItem"
        android:layout_gravity="left"
        android:paddingLeft="@dimen/paddingLeftFiltrar"
        android:gravity="left"
        android:background="@color/colorItens" />
<<<<<<< HEAD

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        android:id="@+id/radioButton8"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preço"
        android:id="@+id/radioButton9"
        android:checked="false" />
=======
>>>>>>> master

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView"
        android:layout_weight="0.84" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:text="@string/strPreco"
        android:id="@+id/textView8"
        android:textSize="@dimen/textSizeItem"
        android:layout_gravity="left"
        android:paddingLeft="@dimen/paddingLeftFiltrar"
        android:gravity="left"
        android:background="@color/colorItens" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="@dimen/editValorWidht"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_gravity="right"
            android:hint="@string/strValorMinimo" />

        <EditText
            android:layout_width="@dimen/editValorWidht"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/editText2"
            android:layout_marginStart="@dimen/marginStar"
            android:hint="@string/strValorMaximo" />
    </RelativeLayout>

    <Button
        android:layout_width="@dimen/btnFiltrarWidht"
        android:layout_height="@dimen/btnFiltrarHeight"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/strFiltrar"
        android:textSize="@dimen/textSizeFiltrar" />

</LinearLayout>